force-app/main/default/objects/User/fields/I_RS_Funding_Opp_Saved_Search_Logic__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Opp_Saved_Search_Logic__c</fullName>
    <description>Filter Logic (e.g. 1 OR 2 AND 3) for Funding Opportunity Search that User has saved to profile</description>
    <label>Funding Opportunity Saved Search Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>