force-app/main/default/objects/User/fields/I_RS_Is_Researcher_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Is_Researcher_User__c</fullName>
    <formula>IF(Profile.Name = &quot;LTU Partner Community User&quot; ||
Profile.Name = &quot;LTU Partner Community Login User&quot;, &quot;1&quot;, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Researcher User?</label>
    <type>Text</type>
</CustomField>