force-app/main/default/objects/User/fields/I_RS_La_Trobe_HR_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_HR_Id__c</fullName>
    <label>La Trobe HR Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>