force-app/main/default/objects/User/fields/I_RS_LARTF_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_LARTF_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LARTF User</label>
    <type>Checkbox</type>
</CustomField>