force-app/main/default/objects/User/fields/I_RS_Power_BI_Report_Access__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Power_BI_Report_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power BI Report Access</label>
    <type>Checkbox</type>
</CustomField>