force-app/main/default/objects/User/fields/I_RS_WheretoFindContact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_WheretoFindContact__c</fullName>
    <description>This field is used to display a default message on Researcher Portal</description>
    <formula>&quot;Click the Contact link to the right to access your:Academic profile info, classification codes, research target guidance, agreements, research outputs and graduate research exa﻿minations.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>